alteração dockerfile 2